<resources>
    <string name="app_name">Calculate Tip</string>
    <string name="enter_bill_amount">Enter Bill Amount</string>
    <string name="choose_tip_percentage">Choose tip</string>
    <string name="percentage_10">10%</string>
    <string name="percentage_15">15%</string>
    <string name="percentage_20">20%</string>
    <string name="split_by">Split by</string>
    <string name="rounding_amount">Rounding Amount</string>
    <string name="round_yes">Yes</string>
    <string name="round_no">No</string>
    <string name="base_amount">Base</string>
    <string name="amount">Rp 365.000</string>
    <string name="tip_text">Tip</string>
    <string name="tip_amount">Rp 54.750</string>
    <string name="per_person">Per person</string>
    <string name="total_per_peson">Rp 105.000</string>
    <string name="total_amount">Rp 420.000</string>
    <string name="total">Total</string>
    <string name="language_setting">Language Setting</string>
    <string name="calculate">Calculate</string>
    <string name="reset_data">Reset Data</string>
    <string name="payment">Payment</string>
</resources>